KubernetesKindDeploy/auth-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: auth
  labels:
    app: auth
spec:
  replicas: 1
  selector:
    matchLabels:
      app: auth
  template:
    metadata:
      labels:
        app: auth
    spec:
      containers:
      - name: auth-svc
        image:  bajaks/webshop-api-microservices/authentication-service:v1.0
        imagePullPolicy:  Never
        ports:
        - containerPort: 8080
---

apiVersion: v1
kind: Service
metadata:
  name: auth-service
spec:
  selector:
    app: auth
    # clusterIP:  None
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
