KubernetesKindDeploy/category-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: category
  labels:
    app: category
spec:
  replicas: 1
  selector:
    matchLabels:
      app: category
  template:
    metadata:
      labels:
        app: category
    spec:
      containers:
      - name: category-svc
        image:  bajaks/webshop-api-microservices/category-service:v1.0
        imagePullPolicy:  Never
        ports:
        - containerPort: 8080
---

apiVersion: v1
kind: Service
metadata:
  name: category-service
spec:
  selector:
    app: category
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
