KubernetesKindDeploy/group-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: group
  labels:
    app: group
spec:
  replicas: 1
  selector:
    matchLabels:
      app: group
  template:
    metadata:
      labels:
        app: group
    spec:
      containers:
      - name: sidecar
        image:  alpine:latest
        command:  ["/bin/sh"]
        tty:  true
        ports:
        - containerPort:  9000
      - name: group-svc
        image:  bajaks/webshop-api-microservices/group-service:v1.0
        imagePullPolicy:  Never
        ports:
        - containerPort: 8080
---

apiVersion: v1
kind: Service
metadata:
  name: group-service
spec:
  selector:
    app: group
    #clusterIP:  None
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
