KubernetesKindDeploy/order-db.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: order-db-ss
  labels:
    app: order-db
spec:
  replicas: 1
  serviceName: order-db-service  
  selector:
    matchLabels:
      app: order-db
  volumeClaimTemplates:
    - metadata:
        name: order-db-vol
      spec:
        accessModes:  [ "ReadWriteOnce" ]
        resources:
          requests:
            storage:  100Mi  

  template:
    metadata:
      labels:
        app: order-db
    spec:
      containers:
      - name: pgdb
        image:  postgres:12.1
        volumeMounts:
          - name: order-db-vol
            mountPath:  /var/lib/postgresql/data
        ports:
        - containerPort: 5432
---

apiVersion: v1
kind: Service
metadata:
  name: order-db-service
spec:
  selector:
    app: order-db
  clusterIP:  None
  ports:
    - protocol: TCP
      port: 5436
      targetPort: 5432
