KubernetesKindDeploy/order-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: order
  labels:
    app: order
spec:
  replicas: 1
  selector:
    matchLabels:
      app: order
  template:
    metadata:
      labels:
        app: order
    spec:
      containers:
      - name: order-svc
        image:  bajaks/webshop-api-microservices/order-service:v1.0
        imagePullPolicy:  Never
        ports:
        - containerPort: 8080
---

apiVersion: v1
kind: Service
metadata:
  name: order-service
spec:
  selector:
    app: order
    #  clusterIP:  None
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
