KubernetesKindDeploy/product-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: product
  labels:
    app: product
spec:
  replicas: 1
  selector:
    matchLabels:
      app: product
  template:
    metadata:
      labels:
        app: product
    spec:
      containers:
      - name: product-svc
        image:  bajaks/webshop-api-microservices/product-service:v1.0
        imagePullPolicy:  Never
        ports:
        - containerPort: 8080
---

apiVersion: v1
kind: Service
metadata:
  name: product-service
spec:
  selector:
    app: product
    #  clusterIP:  None
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
