KubernetesKindDeploy/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app-ingress
  annotations:
    nginx.ingress.kubernetes.io/proxy-body-size:  10m
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  rules:
    - host: galactictrade-api.com
      http:
        paths:
          - path: /Auth(/|$)(.*)
            pathType: Prefix
            backend:
             service:
               name:  auth-service
               port:
                 number: 8080
          - path: /Group(/|$)(.*)
            pathType: Prefix
            backend:
             service:
               name:  group-service
               port:
                 number: 8081
          - path: /Category(/|$)(.*)
            pathType: Prefix
            backend:
             service:
               name:  category-service
               port:
                 number: 8082
          - path: /Product(/|$)(.*)
            pathType: Prefix
            backend:
             service:
               name:  product-service
               port:
                 number: 8083
          - path: /Order(/|$)(.*)
            pathType: Prefix
            backend:
             service:
               name:  order-service
               port:
                 number: 8084
          - path: /Img(/|$)(.*)
            pathType: Prefix
            backend:
             service:
               name:  img-service
               port:
                 number: 8090
